// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`featureFlags reducer action creator works 1`] = `
Object {
  "payload": "/my-page",
  "type": "@widget-navigation/BACK_TO_SET",
}
`;

exports[`featureFlags reducer action creator works 2`] = `
Object {
  "payload": "/my-page",
  "type": "@widget-navigation/NEXT_SET",
}
`;

exports[`featureFlags reducer action creator works 3`] = `
Object {
  "payload": "/my-page",
  "type": "@widget-navigation/BOOKNG_SET",
}
`;

exports[`featureFlags reducer action creator works 4`] = `
Object {
  "payload": "/my-page",
  "type": "@widget-navigation/ACCOUNT_SET",
}
`;

exports[`featureFlags reducer action creator works 5`] = `
Object {
  "payload": "/my-page",
  "type": "@widget-navigation/REVIEW_SET",
}
`;

exports[`featureFlags reducer action creator works 6`] = `
Object {
  "payload": true,
  "type": "@widget-navigation/IS_READY_TO_BOOK_SET",
}
`;

exports[`featureFlags reducer action creator works 7`] = `
Object {
  "payload": true,
  "type": "@widget-navigation/IS_EDITING_SET",
}
`;

exports[`featureFlags reducer reducer works 1`] = `
Immutable.Map {
  "backTo": "/my-page",
  "next": "/",
  "booking": "/",
  "account": "/",
  "review": "/",
  "hasSelectedDate": false,
  "isEditing": false,
}
`;

exports[`featureFlags reducer reducer works 2`] = `
Immutable.Map {
  "backTo": "/",
  "next": "/my-page",
  "booking": "/",
  "account": "/",
  "review": "/",
  "hasSelectedDate": false,
  "isEditing": false,
}
`;

exports[`featureFlags reducer reducer works 3`] = `
Immutable.Map {
  "backTo": "/",
  "next": "/",
  "booking": "/my-page",
  "account": "/",
  "review": "/",
  "hasSelectedDate": false,
  "isEditing": false,
}
`;

exports[`featureFlags reducer reducer works 4`] = `
Immutable.Map {
  "backTo": "/",
  "next": "/",
  "booking": "/",
  "account": "/my-page",
  "review": "/",
  "hasSelectedDate": false,
  "isEditing": false,
}
`;

exports[`featureFlags reducer reducer works 5`] = `
Immutable.Map {
  "backTo": "/",
  "next": "/",
  "booking": "/",
  "account": "/",
  "review": "/my-page",
  "hasSelectedDate": false,
  "isEditing": false,
}
`;

exports[`featureFlags reducer reducer works 6`] = `
Immutable.Map {
  "backTo": "/",
  "next": "/",
  "booking": "/",
  "account": "/",
  "review": "/",
  "hasSelectedDate": true,
  "isEditing": false,
}
`;

exports[`featureFlags reducer reducer works 7`] = `
Immutable.Map {
  "backTo": "/",
  "next": "/",
  "booking": "/",
  "account": "/",
  "review": "/",
  "hasSelectedDate": false,
  "isEditing": true,
}
`;
